<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.example.davidgormally.checkmatefire.media.MediaViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:contentDescription="@string/photo_image"
            app:layout_constraintBottom_toTopOf="@+id/delete_photo_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navigate_back_button" />

        <ImageView
            android:id="@+id/navigate_back_button"
            android:layout_width="@dimen/round_button_small"
            android:layout_height="@dimen/round_button_small"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/navigate_back"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrow_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/delete_photo_button"
            android:layout_width="@dimen/round_button_small"
            android:layout_height="@dimen/round_button_small"
            android:layout_marginBottom="32dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete_photo"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_delete_white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>